--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    background: url(/Images/pokemon-bg.jpg);
+    background-size: cover;
+    display: grid;
+    place-items: center;
+    height: 100vh;
+    
 }
 
 #board {
@@ -11,11 +17,14 @@ body{
     border: 10px solid lightgray;
     display: flex;
     flex-wrap: wrap;
+    margin-top: 20px;
 }
 
 .card {
     height: auto;
     width: 90px;
     margin: 2.5px;
+    
 }
+
 
