--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,38 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     background: url(/Images/pokemon-bg.jpg);
-    background-size: cover;
+    background-size: 80%;
+    background-repeat: no-repeat;
     display: grid;
     place-items: center;
     height: 100vh;
+
     
+}
+
+
+h1 {
+    
+    font-size: 3rem;
+    font-weight: bold;
+    width: 100%;
+    padding-top: 200px;
+}
+#ptop {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+
 }
 
 #board {
     height: 532px;
     width: 475px;
     margin: 0 auto;
-    background-color: green;
+    background-color: yellowgreen;
     border: 10px solid lightgray;
     display: flex;
     flex-wrap: wrap;
-    margin-top: 20px;
 }
 
 .card {
@@ -27,4 +43,18 @@ body{
     
 }
 
+.elem {
+    display: flex;
+    gap: 10px;
+}
 
+
+.box {
+   padding: 20px 18px;
+    background-color: black;
+    border-radius: 10px ;
+    color: white;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
